addons/editor-compact/userstyle.css
/* Full page */
[class*="gui_body-wrapper"] {
  height: calc(100% - 2rem);
}
.sa-body-editor,
.sa-body-editor * {
  scrollbar-width: thin;
}
.sa-body-editor::-webkit-scrollbar,
.sa-body-editor ::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
.sa-body-editor::-webkit-scrollbar {
  background-color: var(--editorDarkMode-page, #e5f0ff);
}
.sa-body-editor::-webkit-scrollbar-thumb,
.sa-body-editor ::-webkit-scrollbar-thumb {
  background-color: var(--editorDarkMode-page-compactScrollbar, #bec7d4);
  background-clip: padding-box;
  border-radius: 4px;
  border: 1px solid transparent;
}

/* Menu bar */
[class*="menu-bar_file-group_"] [class*="menu-bar_hoverable_"] > img,
[class*="menu-bar_divider"],
[class*="menu-bar_help-icon"] {
  display: none;
}
[class*="menu-bar_collapsible-label_"],
[dir="rtl"] [class*="menu-bar_collapsible-label_"],
[class*="settings-menu_dropdown-label_"],
[dir="rtl"] [class*="settings-menu_dropdown-label_"] {
  margin: 0;
}
@media (max-width: 1024px) {
  [class*="menu-bar_file-group_"] [class*="menu-bar_hoverable_"] > img:first-child {
    display: inline;
  }
}

[class*="gui_menu-bar-position"][class*="menu-bar_menu-bar"][class*="box_box"],
[class*="menu-bar_menu-bar-item"] {
  height: 2rem;
}

[class*="menu-bar_file-group_"] [class*="menu-bar_menu-bar-item_"],
[class*="menu-bar_account-info-group_"] [class*="menu-bar_menu-bar-item_"] {
  margin: 0;
  padding: 0 0.5rem;
}
[class*="menu-bar_menu-bar-menu"] {
  margin-top: 2rem;
}
[class*="menu_menu-item"] {
  line-height: 1.75rem;
  padding: 0 0.5rem;
}

[class*="menu-bar_menu-bar-button"] {
  height: 1.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

[class*="menu-bar_growable"] {
  padding-inline-start: 0.5rem;
}
[class*="menu-bar_growable"] [class*="input_input-form"] {
  height: 1.5rem;
  box-sizing: border-box;
  padding: 0.25rem;
  font-size: 0.75rem;
}
[class*="menu-bar_growable"] [class*="input_input-form"]:focus {
  box-shadow: 0 0 0 calc(0.5rem * 0.25) hsla(0, 100%, 100%, 0.25);
}

.sa-editormessages-count {
  top: 0.15rem;
  right: 0.4rem;
}

[class*="account-nav_user-info"] [class*="account-nav_avatar"] {
  width: 1.5rem;
  height: 1.5rem;
  margin-inline-start: 0.25rem;
}

/* Sprites area */
[class^="sprite-info_sprite-info_"] {
  padding: 0.5rem;
  height: 4.75rem;
}
[class*="sprite-info_row"] {
  justify-content: flex-start;
}
[class*="sprite-info_group"],
[class*="sprite-info_column_"] {
  margin-inline-end: 1rem;
}
[class*="sprite-info_icon-wrapper"] {
  width: 1.5rem;
  height: 1.5rem;
  padding: 0.25rem;
}
[class*="sprite-info_sprite-info"] [class*="input_input-form"],
[class*="gui_tabs"] [class*="input_input-form"] {
  height: 1.5rem;
  padding: 0 0.5rem;
}
[class*="sprite-info_sprite-info"] [class*="input_input-form"],
[class*="gui_tabs"] [class*="input_input-form"] {
  height: 1.5rem;
  padding: 0 0.5rem;
}
[class*="gui_body-wrapper_"] [class*="sprite-info_sprite-info"] [class*="input_input-form"]:focus,
[class*="gui_body-wrapper_"] [class*="gui_tabs"] [class*="input_input-form"]:focus {
  box-shadow: 0 0 0 0.125rem var(--editorDarkMode-primary-transparent35, hsl(260deg 60% 60% / 35%));
}
[class*="gui_body-wrapper_"] [class*="sprite-selector-item_is-selected"],
[class*="gui_body-wrapper_"] [class*="stage-selector_is-selected_"] {
  box-shadow: 0px 0px 0px 2px var(--editorDarkMode-primary-transparent35, hsl(260deg 60% 60% / 35%));
}
[class*="input_input-small"],
[class*="sprite-info_larger-input"] input {
  width: 2.5rem;
}

[class*="sprite-selector_scroll-wrapper"] {
  height: calc(100% - 4.75rem);
}
[class*="sprite-selector_scroll-wrapper"]::-webkit-scrollbar-thumb {
  background-color: var(--editorDarkMode-selector-compactScrollbar, #c1c8d1);
}
[class*="sprite-selector_items-wrapper"] {
  padding: 0.125rem;
}
[class*="sprite-selector_sprite-wrapper"] {
  margin: 0.125rem;
}
[class*="sprite-selector-item_delete-button"] {
  top: -0.25rem;
}
[dir="ltr"] [class*="delete-button_delete-button_"] {
  right: -0.25rem;
}
[dir="rtl"] [class*="delete-button_delete-button_"] {
  left: -0.25rem;
}
[class*="delete-button_delete-button-visible"] {
  width: 1rem;
  height: 1rem;
  box-shadow: 0 0 0 1px var(--editorDarkMode-primary-transparent35, hsl(260deg 60% 60% / 35%));
}
[class*="delete-button_delete-icon"] {
  display: none;
}
[class*="delete-button_delete-button-visible"]::after {
  content: "";
  position: absolute;
  display: block;
  top: 25%;
  left: 25%;
  width: 50%;
  height: 50%;
  background-image: url("../../images/cs/close-s3.svg");
  transform: rotate(45deg);
  filter: var(--editorDarkMode-primary-filter, none);
}
img[class*="sprite-selector-item_sprite-image"] {
  max-width: 56px;
  max-height: 32px;
}

[class*="action-menu_main-button"] {
  width: 2rem;
  height: 2rem;
}
[class*="action-menu_main-button"] img {
  width: 1.5rem;
  height: 1.5rem;
}
[class*="action-menu_more-buttons-outer"] {
  width: 2rem;
  bottom: 2rem;
  padding-bottom: calc(2rem / 2);
  margin: 0 0 calc(2rem / -2) 0;
  border-top-left-radius: 2rem;
  border-top-right-radius: 2rem;
}
button[class*="action-menu_more-button"] {
  width: 2rem;
  height: 2rem;
}

/* Project player */
.sa-body-editor [class*="stage-header_stage-menu-wrapper_"]:not([class*="stage-wrapper_full-screen"] *) {
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
  height: 2rem;
}
.sa-body-editor [class*="green-flag_green-flag_"]:not([class*="stage-wrapper_full-screen"] *),
.sa-body-editor .pause-btn:not([class*="stage-wrapper_full-screen"] *),
.sa-body-editor [class*="stop-all_stop-all_"]:not([class*="stage-wrapper_full-screen"] *),
.sa-body-editor [class*="stage-header_stage-button_"]:not([class*="stage-wrapper_full-screen"] *) {
  padding: 0.25rem;
  width: 1.5rem;
  height: 1.5rem;
}
.sa-body-editor [class*="stage-header_stage-button_"]:not([class*="stage-wrapper_full-screen"] *) {
  padding: calc(0.25rem - 1px);
}
/* ... */

